--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.6.0",
+    "@types/express": "^4.17.18",
+    "@types/node": "^20.8.0",
     "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
